--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "site": "paroliere",
     "public": "public",
     "ignore": [
       "firebase.json",
